<resources>
    <string name="app_name">AdAway</string>
    <string name="app_description">Open Source ad blocker</string>
    <string name="button_exit">Exit</string>
    <string name="button_close">Close</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="button_add">Add</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_save">Save</string>
    <string name="button_help">Help</string>
    <string name="header_help">Welcome!</string>
    <string name="text_help">AdAway is a free and open-source software design to block advertising. It fetches advertising network addresses to block them on your device.\nWant to know more? Check the help below!</string>
    <string name="button_show_help">Show more help</string>
    <string name="icon_update_status">Update status</string>
    <string name="text_update">All hosts files from the defined sources are downloaded, merged with your own lists and installed as one hosts file on your system.</string>
    <string name="button_check_update_hosts">Check for updates</string>
    <string name="button_update_hosts">Update hosts</string>
    <string name="button_enable_hosts">Enable ad-blocking</string>
    <string name="button_disable_hosts">Disable ad-blocking</string>
    <string name="header_webserver">Web server</string>
    <string name="webserver_status_running">Running</string>
    <string name="webserver_status_stopped">Stopped</string>
    <string name="webserver_toggle_text">Start or stop webserver on localhost to answer requests to blocked hostnames.</string>
    <string name="button_enable_webserver">Enable web server</string>
    <string name="button_disable_webserver">Disable web server</string>
    <string name="header_vpn">VPN</string>
    <string name="vpn_status_running">Running</string>
    <string name="vpn_status_stopped">Stopped</string>
    <string name="vpn_toggle_text">Start or stop VPN to filter requests.</string>
    <string name="button_enable_vpn">Enable VPN</string>
    <string name="button_disable_vpn">Disable VPN</string>
    <string name="navigation_button_description">Show navigation drawer</string>
    <string name="adblock_pause_button_description">Pause/resume ad blocking</string>
    <string name="update_button">Update blocked domains</string>
    <string name="show_log_button">Show requested domains</string>
    <string name="cat_bottomappbar_lorem_ipsum" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a, ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae, molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor bibendum, vel congue leo egestas.\n\n
Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel, molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula, in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque est.\n\n
Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh. Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc, quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus convallis.\n\n
Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper, libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim."</string>
    <string name="checkbox_list_context_delete">Delete</string>
    <string name="checkbox_list_context_title">Edit Entry</string>
    <string name="checkbox_list_context_edit">Edit</string>
    <string name="lists_tab_whitelist">Whitelist</string>
    <string name="lists_tab_blacklist">Blacklist</string>
    <string name="lists_tab_redirection_list">Redirects</string>
    <string name="list_add_dialog_black">Add host to blacklist</string>
    <string name="list_add_dialog_white">Add host to whitelist</string>
    <string name="list_add_dialog_redirect">Add host redirect</string>
    <string name="list_edit_dialog_black">Edit blacklisted host</string>
    <string name="list_edit_dialog_white">Edit whitelisted host</string>
    <string name="list_edit_dialog_redirect">Edit redirect</string>
    <string name="list_dialog_hostname">Hostname:</string>
    <string name="list_dialog_hostname_hint">The hosts source URL</string>
    <string name="list_dialog_wildcard">(Wildcard characters * and ? are allowed)</string>
    <string name="list_dialog_ip">IP (IPv4 or IPv6):</string>
    <string name="import_dialog">Importing…</string>
    <string name="import_success">Backup successfully imported from your external storage.</string>
    <string name="import_failed">Failed to import backup. Is its format correct? Check logcat for more details.</string>
    <string name="export_dialog">Exporting…</string>
    <string name="export_success">Backup successfully exported to \'adaway-backup.json\' file on your external storage.</string>
    <string name="export_failed">Failed to export backup.</string>
    <string name="hosts_header">The hosts file</string>
    <string name="hosts_description">The hosts file is a system file that maps hostnames to IP addresses. It is a plain text file which configuration is handled by AdAway. Here are its few first lines:</string>
    <string name="hosts_content">Loading the hosts file content…</string>
    <string name="hosts_open_button">Open the hosts file</string>
    <string name="status_checking">Checking for update…</string>
    <string name="status_reverting">Reverting…</string>
    <string name="status_reverting_subtitle">Creating standard hosts file</string>
    <string name="status_update_available">Update available</string>
    <string name="status_update_available_subtitle">Newer hosts files available</string>
    <string name="status_no_connection">No Internet connection</string>
    <string name="status_no_connection_subtitle">No Internet connection available</string>
    <string name="status_download_fail">Unavailable sources</string>
    <string name="status_download_fail_subtitle_new">No hosts sources are reachable!</string>
    <string name="status_root_access_denied">Root access denied</string>
    <string name="status_root_access_denied_subtitle">Allow root access from your root app</string>
    <string name="status_failure">Something went wrong</string>
    <string name="status_failure_subtitle">Check the logcat for more details</string>
    <string name="status_enabled">Enabled</string>
    <string name="status_enabled_subtitle">Newest hosts files enabled</string>
    <string name="status_disabled">Disabled</string>
    <string name="status_disabled_subtitle">Default hosts file installed</string>
    <string name="notification_channel_update_name">Updates</string>
    <string name="notification_channel_update_description">New hosts update notifications</string>
    <string name="notification_channel_vpn_sevice_name">VPN</string>
    <string name="notification_channel_vpn_service_description">VPN running status</string>
    <string name="notification_configuration_changed">Your configuration changed. You need to install hosts file to apply it.</string>
    <string name="notification_configuration_changed_action">Apply</string>
    <string name="notification_configuration_installing">Installing hosts file…</string>
    <string name="notification_configuration_failed">Failed to install hosts file.</string>
    <string name="apply_symlink_missing">Symlink from your target to /system/etc/hosts is not existing or incorrect! AdAway will not work if it is not pointing to the right file.\n\nDo you want to try creating a symlink?</string>
    <string name="apply_symlink_missing_title">Symlink missing</string>
    <string name="apply_not_enough_space">Not enough space on the partition!\nTry changing the target hosts file in preferences to /data/data/hosts.</string>
    <string name="apply_not_enough_space_title">Not enough space</string>
    <string name="apply_private_file_fail">Downloaded file could not be read.</string>
    <string name="apply_private_file_fail_title">Private file fail</string>
    <string name="apply_remount_fail">Remounting the partition as read/write failed!</string>
    <string name="apply_remount_fail_title">Remount failed</string>
    <string name="apply_copy_fail">Copying of hosts file failed!</string>
    <string name="apply_copy_fail_title">Copy failed</string>
    <string name="apply_success_subtitle">Applied hosts sources</string>
    <string name="apply_success_title">Applying successful</string>
    <string name="adware_header">Adware</string>
    <string name="adware_description">Here you can find installed adware, bad applications which can\'t be blocked by AdAway. These apps use for example Airpush notifications that pop up even when the app is not running or even change your ringtone. The only available countermeasure is to uninstall those apps by clicking on the list items.</string>
    <string name="adware_scanning">Scanning&#8230;</string>
    <string name="tcpdump_header">Tcpdump</string>
    <string name="tcpdump_description">Tcpdump is a tool to monitor DNS requests and save them in a log file. You can start it in the background, run applications that display ads, and afterwards analyze the DNS requests using the log file. Possible ad server can then be added to your blacklist.</string>
    <string name="tcpdump_enable_monitoring">Enable monitoring</string>
    <string name="tcpdump_show_results">Show results</string>
    <string name="hosts_sources_drawer_item">Hosts sources</string>
    <string name="your_lists_drawer_item">Your lists</string>
    <string name="open_hosts_file_drawer_item">Open hosts file</string>
    <string name="preferences_drawer_item">Preferences</string>
    <string name="shortcut_dns_requests">DNS requests</string>
    <string name="shortcut_your_lists">Your lists</string>
    <string name="shortcut_preferences">Preferences</string>
</resources>