<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dialog_inner_padding">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@id/list_dialog_hostname"
        android:text="@string/list_dialog_hostname"
        android:textAppearance="@android:style/TextAppearance.Medium" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:scrollHorizontally="true"
        android:singleLine="true"

        app:helperText="@string/list_dialog_wildcard">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/list_dialog_hostname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/list_dialog_hostname_hint"
            android:imeOptions="actionNext"
            android:inputType="textVisiblePassword"
            android:importantForAutofill="no" />

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>
