<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:enabled="true"
        android:icon="@mipmap/shortcut_preferences"
        android:shortcutDisabledMessage="@string/shortcut_preferences"
        android:shortcutId="preferences"
        android:shortcutLongLabel="@string/shortcut_preferences"
        android:shortcutShortLabel="@string/shortcut_preferences">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="org.adaway.ui.home.HomeActivity"
            android:targetPackage="org.adaway">
            <extra
                android:name="org.adaway.ui.navigation.ROUTE"
                android:value="prefs" />
        </intent>
    </shortcut>
    <shortcut
        android:enabled="true"
        android:icon="@mipmap/shortcut_dns_requests"
        android:shortcutDisabledMessage="@string/shortcut_dns_requests"
        android:shortcutId="dns_requests"
        android:shortcutLongLabel="@string/shortcut_dns_requests"
        android:shortcutShortLabel="@string/shortcut_dns_requests">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="org.adaway.ui.home.HomeActivity"
            android:targetPackage="org.adaway">
            <extra
                android:name="org.adaway.ui.navigation.ROUTE"
                android:value="log" />
        </intent>
    </shortcut>
    <shortcut
        android:enabled="true"
        android:icon="@mipmap/shortcut_your_lists"
        android:shortcutDisabledMessage="@string/shortcut_your_lists"
        android:shortcutId="your_lists"
        android:shortcutLongLabel="@string/shortcut_your_lists"
        android:shortcutShortLabel="@string/shortcut_your_lists">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="org.adaway.ui.home.HomeActivity"
            android:targetPackage="org.adaway">
            <extra
                android:name="org.adaway.ui.navigation.ROUTE"
                android:value="lists/0" />
        </intent>
    </shortcut>
</shortcuts>
