<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_spacing">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_inner_padding"
                android:text="@string/tcpdump_header"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/card_inner_padding"
                android:layout_marginRight="@dimen/card_inner_padding"
                android:background="@color/card_spacer" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:padding="@dimen/card_inner_padding"
                android:text="@string/tcpdump_description"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

            <com.google.android.flexbox.FlexboxLayout
                style="?android:attr/buttonBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/tcpdump_show_results"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/button_spacing"
                    android:layout_marginRight="@dimen/button_spacing"
                    android:paddingLeft="@dimen/button_spacing"
                    android:paddingRight="@dimen/button_spacing"
                    android:text="@string/tcpdump_show_results" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/tcpdump_enable_monitoring"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/button_spacing"
                    android:layout_marginRight="@dimen/button_spacing"
                    android:paddingLeft="@dimen/button_spacing"
                    android:paddingRight="@dimen/button_spacing"
                    android:text="@string/tcpdump_enable_monitoring" />
            </com.google.android.flexbox.FlexboxLayout>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</ScrollView>