<?xml version="1.0" encoding="utf-8"?>
<!--<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent">-->


<android.support.v7.widget.CardView xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/adware_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/adware_header"
                android:textAppearance="@android:style/TextAppearance.Medium" />

            <View
                android:id="@+id/separator_header"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#3F000000" />

            <TextView
                android:id="@+id/adware_description_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:padding="16dp"
                android:text="@string/adware_description"
                android:textAppearance="@android:style/TextAppearance.Small" />

            <View
                android:id="@+id/separator_middle"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#3F000000" />

            <TextView
                android:id="@+id/adware_status_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/adware_scanning"
                android:textAppearance="@android:style/TextAppearance.Small" />

            <ListView
                android:id="@+id/adware_list"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="10"
                tools:listitem="@layout/list_two_entries" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

<!--</ScrollView>-->